Source/WebCore: :checked pseudo selector not matching selected option https://bugs.webkit.org/show_bug.cgi?id=63192

Patch by Sameer Patil <mkrp87@motorola.com> on 2011-10-11
Reviewed by Kent Tamura.

Test: fast/css/checked-pseudo-selector.html

Option element selected state need to be checked in checkOneSelector,
so that it can be considered as checked on querySelectorAll(':checked').

* css/SelectorChecker.cpp:
(WebCore::SelectorChecker::checkOneSelector):

LayoutTests: :checked pseudo selector not matching selected option
https://bugs.webkit.org/show_bug.cgi?id=63192

Patch by Sameer Patil <mkrp87@motorola.com> on 2011-10-11
Reviewed by Kent Tamura.

* fast/css/checked-pseudo-selector-expected.txt: Added.
* fast/css/checked-pseudo-selector.html: Added.

Canonical link: https://commits.webkit.org/85956@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97224 268f45cc-cd09-0410-ab3c-d52691b4dbfc